k8s_configuration/backend/base/stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-stable-service
  namespace: memories-notes-app-namespace
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
